Fixed button align

--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ button:active {
 
 .info {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
